<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakeryshop.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="225dp"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            android:src="@drawable/tk" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:fontFamily="sans-serif"
            android:paddingTop="10dp"
            android:text="@string/shop_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#06bc6d"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textColor="#1c6e4b"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/hours"
            android:textColor="#f80f53ab"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hours"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="#f80f53ab"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact"
            android:textAllCaps="true"
            android:textColor="#f80f53ab"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_marginLeft="16dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/email"
            android:textColor="#f80f53ab"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/website"
            android:textColor="#1c6e4b"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>
